# INST-414-Final-Marketing-Analysis

./: Makefile  README.md  environment.yml  pyproject.toml
marketing_analysis/: __init__.py
marketing_analysis/modeling/: dataset.py  features.py  plots.py  predict.py  train.py  visualize_and_error_analysis.py
models/: logistic_regression.pkl  xgboost.pkl
