[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Marketing Analysis"
version = "0.0.1"
description = "Marketing Analysis to Increase Sales"
authors = [
  { name = "David Lin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Marketing Analysis"]
include = ["pyproject.toml", "Marketing Analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Marketing Analysis"]
force-sort-within-sections = true

